Working bitcoin-rpc explorer service

--- a/bitcoind/bitcoin.conf
+++ b/bitcoind/bitcoin.conf
@@ -11,6 +11,7 @@ rpcauth=btcuser01:e37e06c7323991e1ee63c146810a8e54$f98897a0b2e22a5bf459296b714a4
 rpcbind=bitcoind
 rpcport=29123
 rpcallowip=0.0.0.0/0
+rpcworkqueue=500
 
 [main]
 [test]
