enable ssl and reverse proxy for btc-explorer at https://localhost:50003/btcexplorer (contextpath change in app required!)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /.idea/*
 /nginx/files-runtime/certs/nginx-selfsigned.crt
 /nginx/files-runtime/certs/nginx-selfsigned.key
+/nginx/files-runtime/dhparam.pem
