--- a/compose.yaml
+++ b/compose.yaml
@@ -66,7 +66,10 @@ services:
     image: svdkrgsfa/btc-rpc-explorer:latest
     volumes:
       - ${PERSISTENT_DATA_DIR}/bitcoind/.cookie:/tmp/.cookie
+    #ports:
+    #  - "3012:3012"
     environment:
+      BTCEXP_BASEURL: /btcexplorer/
       BTCEXP_HOST: 0.0.0.0
       BTCEXP_PORT: 3012
       BTCEXP_BITCOIND_HOST: bitcoind
@@ -81,8 +84,7 @@ services:
       BTCEXP_ADDRESS_API: electrum
       BTCEXP_ELECTRUM_TXINDEX: true
       BTCEXP_ELECTRUM_SERVERS: tcp://electrs:50001
-    ports:
-      - "3012:3012"
+    #Exposing only for troubleshooting, port exposed in nginx service
 
 # privacy-router:
 #   container_name: internetrouter
